Fix contrast errors

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -123,7 +123,7 @@ h3 {font-size: var(--h3-font);
 }
 
 .grid__item {
-  background-color: #B9BAA3;
+  background-color: #c7c7c7;
   width: auto;
   min-height: auto;
   margin: 0;
@@ -271,7 +271,7 @@ button:focus,
 }
 
 :root {
-  --primary-color: #357b70;
+  --primary-color: #005f54;
   --secondary-color: #e0b354;
   --dark-grey: #2b2b2b;
   --a-color: #2f796e;
