--- a/css/styles.css
+++ b/css/styles.css
@@ -271,7 +271,7 @@ button:focus,
 }
 
 :root {
-  --primary-color: #357b70;
+  --primary-color: #005f54;
   --secondary-color: #e0b354;
   --dark-grey: #2b2b2b;
   --a-color: #2f796e;
